# KeyBento

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  default.conf  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
api/: main.py
api/endpoints/: destinations.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: ApiClient.js  App.js  App.test.js  FlashProvider.test.js  TimeAgo.js  index.css
client/src/components/: AddProperty.js  Bento.js  Body.js  Calendar.js  Destination.js  Destinations.js  Greeting.js  Header.js  KeyCalendar.js  More.js  PrivateRoute.js  PublicRoute.js  Sidebar.js  TopContent.js
client/src/contexts/: ApiProvider.js  FlashProvider.js  (+1 more)
core/key_bento.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
key-bento/: package-lock.json
src/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/api/: config.py  exceptions.py  main.py
src/api/core/: db.py
src/api/dependencies/: __init__.py  authentication.py  get_db.py  get_settings.py
src/api/endpoints/: authentication.py  availabilities.py  destinations.py  initialise.py  notification_of_interest.py  registration.py  users.py
src/common/: paths.py
src/data_processing/: sample_data.py
src/models/: __init__.py  availability.py  notification_of_interest.py  properties.py  targets.py  user.py
src/schemas/: __init__.py  availabilities.py  destinations.py  notification_of_interest.py  pagination.py  user.py
tests/crud/: test_property.py  test_registration.py  test_user.py
(+7 files in other folders)
